--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -39,3 +39,11 @@ body {
   font-weight: 100;
   font-size: 4rem;
 }
+
+/* Media Queries */
+@media (max-width: 1100px) {
+  /* Heading group h1 */
+  #heading-group h1 {
+    font-size: 3rem;
+  }
+}
