Added first img and text with responsive order to the content section in index.html

--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -40,6 +40,8 @@ body {
   font-size: 4rem;
 }
 
+/* Contnet Section */
+
 /* Media Queries */
 @media (max-width: 1100px) {
   /* Heading group h1 */
