--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -41,6 +41,23 @@ body {
 }
 
 /* Contnet Section */
+#content h2 {
+  color: #ea1c2c;
+  font-weight: 100;
+  font-size: 2.5rem;
+}
+
+#content p {
+  color: #f498c8;
+  font-weight: 100;
+  font-size: 1.25rem;
+  line-height: 2;
+}
+
+#content .blurb {
+  margin-top: 100px;
+}
+/* End of Content Section */
 
 /* Media Queries */
 @media (max-width: 1100px) {
