--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -59,6 +59,11 @@ body {
 }
 /* End of Content Section */
 
+/* Scrolling Effect Class */
+.navbar.scrolled {
+  background: rgb(222, 192, 222);
+}
+
 /* Media Queries */
 @media (max-width: 1100px) {
   /* Heading group h1 */
