--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -62,6 +62,7 @@ body {
 /* Scrolling Effect Class */
 .navbar.scrolled {
   background: rgb(222, 192, 222);
+  transition: background 1s;
 }
 
 /* Media Queries */
