--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -62,8 +62,9 @@ body {
 /* Footer */
 #main-footer {
   background: rgb(222, 192, 222);
-  color: #fff;
+  color: #ea1c2c;
   font-weight: 100;
+  font-size: 1.5rem;
 }
 
 /* Scrolling Effect Class */
